compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_equality-2.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
assertion_line: 105
expression: "\nfn go(y) {\n  let x = 1\n  x == y\n}\n"
---
function go(y) {
  let x = 1;
  return x === y;
}

