compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_equality.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn go() {\n  1 != 2\n  1 == 2\n}\n"
---
----- SOURCE CODE

pub fn go() {
  1 != 2
  1 == 2
}


----- COMPILED JAVASCRIPT
export function go() {
  1 !== 2;
  return 1 === 2;
}
