compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__int_negation.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn go() {\n  let a = 3\n  let b = -a\n}\n"
---
----- SOURCE CODE

pub fn go() {
  let a = 3
  let b = -a
}


----- COMPILED JAVASCRIPT
export function go() {
  let a = 3;
  let b = - a;
  return b;
}
