compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__numbers__many_preceeding_zeros_float.snap
---
source: compiler-core/src/javascript/tests/numbers.rs
expression: "\npub fn main() {\n  0000_000_00_9_179.1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  0000_000_00_9_179.1
}


----- COMPILED JAVASCRIPT
export function main() {
  return 9179.1;
}
